--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -186,6 +186,9 @@
 
 컨볼루션을 거친 이미지는 어떤 특징이 어디에 얼마나 강하게 존재하는지를 보여준다
 
+##이미지 처리 파이프라인
+https://claude.ai/public/artifacts/2c09bc56-7cc3-4ea0-b3ca-7678aa107756
+
 <img width="1385" height="746" alt="image" src="https://github.com/user-attachments/assets/b5de3cce-5e30-4cb8-aca2-bf2000902c64" />
 이미지 업로드-수직 필터 이용
 <img width="1343" height="562" alt="image" src="https://github.com/user-attachments/assets/369eb81c-fcfc-4efb-b03d-5b111ea1981f" />
@@ -197,5 +200,13 @@
 <img width="1350" height="566" alt="image" src="https://github.com/user-attachments/assets/1d6ab25f-3392-4e48-8e6e-e9b7fd0999f2" />
 이미지 업로드 - 결과
 <img width="1350" height="420" alt="image" src="https://github.com/user-attachments/assets/1a7f1f45-7581-4b34-bbfb-fa9c7b4534b1" />
+
+
+
+
+## CNN 파이프라인 시각화
+https://claude.ai/public/artifacts/df7a5986-dd0a-4a16-af85-ad90959de392
+
+<img width="1414" height="712" alt="image" src="https://github.com/user-attachments/assets/14a2d4ee-9d63-4740-a7fc-bab3774ab9b5" />
 
 
