--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -208,5 +208,8 @@ https://claude.ai/public/artifacts/2c09bc56-7cc3-4ea0-b3ca-7678aa107756
 https://claude.ai/public/artifacts/df7a5986-dd0a-4a16-af85-ad90959de392
 
 <img width="1414" height="712" alt="image" src="https://github.com/user-attachments/assets/14a2d4ee-9d63-4740-a7fc-bab3774ab9b5" />
-
+<img width="1411" height="714" alt="image" src="https://github.com/user-attachments/assets/4459aec3-e488-40a0-8a83-43527813be03" />
+<img width="1402" height="560" alt="image" src="https://github.com/user-attachments/assets/fcc70560-c231-43da-8fd8-15ee45a3a34c" />
+<img width="1379" height="705" alt="image" src="https://github.com/user-attachments/assets/0ca4a692-1248-4f9c-a3b2-b2ebe597c303" />
+<img width="1410" height="605" alt="image" src="https://github.com/user-attachments/assets/d03d9427-9263-4ca2-abfa-0496e6186db6" />
 
