--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -186,7 +186,7 @@
 
 컨볼루션을 거친 이미지는 어떤 특징이 어디에 얼마나 강하게 존재하는지를 보여준다
 
-##이미지 처리 파이프라인
+##이미지 처리 파이프라인 수직 수평 필터
 https://claude.ai/public/artifacts/2c09bc56-7cc3-4ea0-b3ca-7678aa107756
 
 <img width="1385" height="746" alt="image" src="https://github.com/user-attachments/assets/b5de3cce-5e30-4cb8-aca2-bf2000902c64" />
@@ -204,7 +204,7 @@ https://claude.ai/public/artifacts/2c09bc56-7cc3-4ea0-b3ca-7678aa107756
 
 
 
-## CNN 파이프라인 시각화
+## CNN 파이프라인 시각화 패딩,렐루
 https://claude.ai/public/artifacts/df7a5986-dd0a-4a16-af85-ad90959de392
 
 <img width="1414" height="712" alt="image" src="https://github.com/user-attachments/assets/14a2d4ee-9d63-4740-a7fc-bab3774ab9b5" />
@@ -213,3 +213,18 @@ https://claude.ai/public/artifacts/df7a5986-dd0a-4a16-af85-ad90959de392
 <img width="1379" height="705" alt="image" src="https://github.com/user-attachments/assets/0ca4a692-1248-4f9c-a3b2-b2ebe597c303" />
 <img width="1410" height="605" alt="image" src="https://github.com/user-attachments/assets/d03d9427-9263-4ca2-abfa-0496e6186db6" />
 
+
+## 샤프닝 필터
+1. **기본 개념**: 샤프닝 필터란 무엇인가
+2. 
+3. **구조와 원리**: 어떻게 작동하는가
+4. 
+5. **다양한 종류**: 기본/강한/부드러운 샤프닝
+6. 
+7. **비교표**: 블러 vs 샤프닝 차이점
+8. 
+9. **실제 사용 예시**: 사진 보정, 컴퓨터 비전
+10. 
+11. **주의사항**: 부작용과 올바른 사용법
+12. 
+13. **신호등 검출**: 실제 프로젝트에서의 활용
