--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -182,6 +182,8 @@
 
 컨볼루션에 이용되는 웨이트 세트는 행렬로 나타내고 이것을 Kernel or Filter이라고 부름
 
+바이어스는 뉴런의 출력값을 조정해주는 추가 상수 항
+
 컨볼루션 연산의 핵심은 벡터간의 내적과 동일수직
 
 컨볼루션을 거친 이미지는 어떤 특징이 어디에 얼마나 강하게 존재하는지를 보여준다
