--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -224,3 +224,49 @@ https://claude.ai/public/artifacts/df7a5986-dd0a-4a16-af85-ad90959de392
 5. **실제 사용 예시**: 사진 보정, 컴퓨터 비전
 6. **주의사항**: 부작용과 올바른 사용법
 7. **신호등 검출**: 실제 프로젝트에서의 활용
+8. 
+
+### 혁펜하임 이지 딥러닝 책 정리
+컨볼루션을 통해 얻은 결과를 feature map이라고 함
+
+피처맵은 채널 축으로 쌓아 결과를 만든다
+
+이 방식이 위치 정보를 유지하고 채널이 ㅊ출한 특징 정보를 분리하여 보존함
+
+컬볼루션 레이어에서 학습 가능한 파라미터는 필터가 가지는 웨이트와 바이어스
+
+커널의 크기와 사용할 필터의 개수는 사용자가 직접 설정해야하는 하이퍼 파라미터임
+
+이로써 어떤 특징을 추출해야 할지를 학습을 통해 결정한다
+
+##CNN의 놀라운점
+어떤 특징을 추출해야 분류를 잘 수행할 수 있을지를 ai 스스로 학습을 통해 알아냄
+
+컨볼루션 레이어를 적용할 때 주로 사용되는 중요한 옵션
+Padding & Stride
+
+#### Padding
+
+5x5가 3x3으로 나왔는데 크기가 작아지지 않게
+5x5를 어떻게 만들어낼까에서 고안된 게 padding
+패딩 후 피처맵이 나오는데 그것으로 렐루를 함
+렐루는 음수값을 0으로 만든다
+
+1.이미지의 크기 유지(컨볼루션 하면 이미지의 크기가 작아지기 때문)
+2.테두리 정보 보존
+>>> 0의 걊이 추가 된 건 원본 데이터에 최소한의 영향을 주면서 이미지의 크기를 유지하게 함
+결과적으로, 이미지의 모든 부분이 분석하는데 있어서 균형있게 기여하게 함으로 특징 추출의 퀄리티가 향상
+
+#### Stride
+
+컨볼루션 필터가 이미지 위를 이동하는 보폭을 의미함
+
+1. 특징 추출의 효율성: 거시적으로 이미지를 볼 수 있게 되므로 디테일보다는 전반적인 특징을 추출하는데 도움
+2. 계산량 감소: Stride를 늘리면 출력 크기가 줄어들어 연산량이 감소하고 모델 학습과 추론 속도를 향상시킴
+Padding과Stride를 잘 사용하면 네트워크 성능과 효율성을 크게 향상 시킬 수 있는 중요한 하이퍼파라미터이다
+
+
+
+
+
+
