--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -254,7 +254,8 @@ Padding & Stride
 
 1.이미지의 크기 유지(컨볼루션 하면 이미지의 크기가 작아지기 때문)
 2.테두리 정보 보존
->>> 0의 걊이 추가 된 건 원본 데이터에 최소한의 영향을 주면서 이미지의 크기를 유지하게 함
+- 0의 걊이 추가 된 건 원본 데이터에 최소한의 영향을 주면서 이미지의 크기를 유지하게 함
+- 
 결과적으로, 이미지의 모든 부분이 분석하는데 있어서 균형있게 기여하게 함으로 특징 추출의 퀄리티가 향상
 
 #### Stride
