--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -1,4 +1,7 @@
 0\*\*CNN (Convolutional Neural Network)\*\*
+
+#### CNN - 사람이 무의식적으로 수행하는 '보는'행위의 놀라운 과정을 이해할 수 있는 도구
+### 핵심: 신경망 연결 구조를 효과적으로 설게한 것, 멀리 있는 픽셀들의 정보도 활용하되, 여러 단계의 정제 과정을 거친 후에 활용함 
 | Term                                 | Description                                                                                         |
 | ------------------------------------ | --------------------------------------------------------------------------------------------------- |
 | **Convolution**                      | Sliding a filter (kernel) over the input to extract features like edges, textures, etc.             |
@@ -254,8 +257,8 @@ Padding & Stride
 
 1.이미지의 크기 유지(컨볼루션 하면 이미지의 크기가 작아지기 때문)
 2.테두리 정보 보존
-- 0의 걊이 추가 된 건 원본 데이터에 최소한의 영향을 주면서 이미지의 크기를 유지하게 함
-- 
+0의 걊이 추가 된 건 원본 데이터에 최소한의 영향을 주면서 이미지의 크기를 유지하게 함
+  
 결과적으로, 이미지의 모든 부분이 분석하는데 있어서 균형있게 기여하게 함으로 특징 추출의 퀄리티가 향상
 
 #### Stride
@@ -267,7 +270,31 @@ Padding & Stride
 Padding과Stride를 잘 사용하면 네트워크 성능과 효율성을 크게 향상 시킬 수 있는 중요한 하이퍼파라미터이다
 
 
+#### Pooling 레이어
+CNN을 구성할 때 컨불류션 레이어와 함께 자주 사용되는 레이어
 
+주로 입력 데이터의 공간적 크기를 줄이면서 중요한 특징을 보존하는 역할
+
+특징: 학습 가능한 파라미터 없이 동작함
+
+Max Pooling: 지정된 영역에서 최댓값을 선택(해당 행렬의 가장 큰 값을 가져옴)
+Average Pooling: 평균을 구하며 해당 영역을 대표하는 값으로 사용(해당 행렬의 평균 값을 대표값으로 가져옴)
+풀링 작업은 각 특징맵에 독립적으로 적용 되므로 채널의 수는 변하지 않는다
+이점
+1.데이터 압축: 공간적 크기를 줄여 정보를 압축하고 중요한 특징을 보존
+2.계산 효울성 향상: 크기 감소로 후속 레이어의 연산량과 메모리 사용을 줄임
+3.Overfitting위험 감소: 모델의 복잡돌를 낮춰서 일반화 능력을 향상 시킴
+4.특징의 불변성 증가: 입력의 작은 변화나 위치 변동에 덜 민감해짐
+
+Global Poolin: 풀링 커널 크기를 입력 이미지의 전체 크기와 동일하게 설정한 것
+
+특히 Global Average Pooling이 자주 사용됨
+
+이는 주로 모델의 마지막 부분에서 특징을 효과적으로 요약하는 역할을 함
+
+주요 장점은 입력 이미지의 크기에 대한 유연성을 제공한다. 각 특징맵을 하나의 값으로 압축하여 fc레이어에 전달하므로 입력 이미지의 크기와 관계없이 항상 고정된 크기의 출력을 제공함
+
+이것으로 모델의 파라미터 수를 크게 줄여 모델의 복잡도를 낮추고 Overfitting 위험을 줄이는 데에 기여함
 
 
 
