--- a/7.14.CNN.md
+++ b/7.14.CNN.md
@@ -227,4 +227,93 @@ https://claude.ai/public/artifacts/df7a5986-dd0a-4a16-af85-ad90959de392
 5. **실제 사용 예시**: 사진 보정, 컴퓨터 비전
 6. **주의사항**: 부작용과 올바른 사용법
 7. **신호등 검출**: 실제 프로젝트에서의 활용
-8. 
+
+---
+
+## ✅ ReLU를 왜 쓰는가?
+
+### ReLU (Rectified Linear Unit) 함수
+
+```python
+f(x) = max(0, x)
+```
+
+* 입력값이 **0 이하일 때는 0**,
+* 입력값이 **0보다 크면 그대로 출력**
+
+---
+
+## 🎯 왜 CNN에서 ReLU로 음수를 제거할까?
+
+### 1. ✅ **비선형성(non-linearity)를 추가하려고**
+
+* CNN의 합성곱(Convolution) 연산은 **선형 연산**입니다.
+* 선형 연산만 계속 쌓으면, 아무리 많이 쌓아도 결국 **하나의 선형 함수**밖에 표현 못 해요.
+* ReLU 같은 **비선형 함수**를 중간에 넣어야 CNN이 **복잡한 패턴, 경계, 구조**를 표현할 수 있어요.
+
+---
+
+### 2. ✅ **학습 안정성 & 속도 개선**
+
+* ReLU는 **계산이 매우 간단**해서 학습이 빠릅니다.
+* 다른 함수들(Sigmoid, Tanh)은 계산이 복잡하고 **기울기 소실(vanishing gradient)** 문제가 잘 생깁니다.
+* ReLU는 그걸 피하면서도 **효율적으로 작동**해요.
+
+---
+
+### 3. ✅ **음수 제거 = 중요한 정보만 남긴다**
+
+* CNN의 필터는 특징을 추출하는 역할을 합니다.
+* 이때 나오는 음수값은 **해당 특징이 없다거나 약하다는 신호**일 수 있어요.
+* ReLU는 그런 약한/불필요한 신호(음수)를 제거해서 **더 강한 특징에 집중**하게 만듭니다.
+
+---
+
+## 📉 음수를 그대로 두면 생길 수 있는 문제
+
+| 문제                    | 설명                               |
+| --------------------- | -------------------------------- |
+| **출력 신호가 작아짐**        | 음수 + 양수 혼합되면 다음 층으로 전달되는 정보가 약해짐 |
+| **활성화 평균값이 0 근처로 수렴** | 전체 신호가 죽어서 학습이 느려짐               |
+| **비효율적인 학습**          | 쓸모없는 정보도 계속 전달됨                  |
+
+---
+
+## 📌 예시: ReLU vs ReLU 없음
+
+```python
+# Without ReLU
+conv_output = -3.4   # 다음 층에도 음수가 전달됨 → 정보 약함
+
+# With ReLU
+relu_output = max(0, -3.4) = 0  # 음수 제거 → 신호 OFF
+```
+
+→ CNN은 이런 식으로 **필요 없는 신호를 차단**하면서 중요한 특징만 통과시키는 구조로 작동해요.
+
+---
+
+## ✅ 그럼... 음수가 무조건 나쁘다는 뜻인가요?
+
+아니요. ReLU는 "음수 = 나쁜 것"이라기보다는,
+
+> ❗ **학습 효율성과 정보 전달을 위해 일부러 ‘음수 신호를 제거’하는 전략**입니다.
+
+그리고 ReLU에도 단점이 있어서 다음과 같은 변형도 있어요:
+
+| 함수             | 설명                                                 |
+| -------------- | -------------------------------------------------- |
+| **Leaky ReLU** | 음수일 때도 아주 약한 기울기 유지 (`f(x) = x if x>0 else 0.01x`) |
+| **ELU, SELU**  | 음수도 일정 비율로 살려서 더 부드러운 학습 유도                        |
+
+---
+
+## 🔍 요약
+
+| 질문                | 답변                            |
+| ----------------- | ----------------------------- |
+| **왜 ReLU를 쓰나요?**  | 비선형성 추가, 학습 빠름, 음수 제거로 정보 강조  |
+| **왜 음수를 제거하나요?**  | 쓸모없는 신호 제거, 강한 특징에 집중         |
+| **음수는 무조건 나쁜가요?** | 그렇진 않지만, 제거하면 학습이 더 효율적일 수 있음 |
+
+---
