--- a/7월18일_mAP.grahp.md
+++ b/7월18일_mAP.grahp.md
@@ -1,5 +1,3 @@
----
-
 ## 📊 mAP 그래프란
 
 ### ✅ 정의
@@ -31,13 +29,13 @@
 
 * 빨간색: precision ↑
 * 파란색: recall ↑
-  곡선 아래 면적이 클수록 AP가 높고, 결국 mAP도 높습니다.
+  곡선 아래 면적이 클수록 AP가 높고, 결국 mAP도 높음.
 
 ---
 
 ## 🧪 YOLO 훈련 시 mAP 그래프 확인 방법
 
-Ultralytics YOLO (`v8~v12`)로 모델 훈련 시, 자동으로 성능 그래프가 저장됩니다.
+Ultralytics YOLO (`v8~v12`)로 모델 훈련 시, 자동으로 성능 그래프됨.
 
 ```bash
 runs/detect/train/  # 내부에 다음과 같은 그래프 있음:
