--- a/7월18일_mAP.grahp.md
+++ b/7월18일_mAP.grahp.md
@@ -1,4 +1,4 @@
-## 📊 mAP 그래프란
+## 📊 mAP 그래프
 
 ### ✅ 정의
 
@@ -62,5 +62,93 @@ Image(filename='runs/detect/train/results.png')
 | **mAP 그래프 종류** | PR 곡선, epoch 변화 그래프, 클래스별 막대그래프 등 |
 | **높을수록 좋은 값**  | 보통 0.5 이상이면 양호, 0.7 이상이면 매우 우수    |
 | **자동 생성 위치**   | `runs/detect/train/` 폴더 내 그래프 파일들 |
+
+---
+
+
+## 📁 mAP 그래프 저장 위치
+
+### ✅ 기본 경로 (Ultralytics 기준)
+
+```bash
+runs/detect/train/
+```
+
+이 폴더는 훈련이 끝나면 자동으로 생성, 내부에 다양한 그래프와 로그가 포함.
+
+---
+
+### 📄 주요 파일들
+
+| 파일 이름                      | 내용                                           |
+| -------------------------- | -------------------------------------------- |
+| **`results.png`**          | 훈련 과정에서의 mAP, precision, recall, loss 변화 그래프 |
+| **`PR_curve.png`**         | 클래스별 Precision-Recall 곡선 (mAP과 직결)           |
+| **`F1_curve.png`**         | F1 점수 변화 (정확도와 재현율의 조화 평균)                   |
+| **`confusion_matrix.png`** | 클래스별 정오분류 행렬                                 |
+| **`metrics/` 폴더**          | mAP 수치 및 그래프의 원천 데이터 (`.npy` 파일 등)           |
+
+---
+
+### 📍 그래프 예시 보기 (Colab/Python)
+
+```python
+from IPython.display import Image
+
+# 종합 결과 그래프 보기
+Image(filename='runs/detect/train/results.png')
+
+# PR 커브 보기 (정밀도-재현율)
+Image(filename='runs/detect/train/PR_curve.png')
+```
+
+---
+
+## 🧪 mAP 수치 직접 보기
+
+```python
+results = model.train(data='your_data.yaml', epochs=50)
+
+# 훈련 후 mAP 값 출력
+print(results.metrics)  # or results.results_dict
+```
+
+또는 터미널 로그 마지막 줄을 보면 아래와 같은 정보 나옴:
+
+```
+metrics/precision, recall, mAP50, mAP50-95: 0.89, 0.85, 0.92, 0.65
+```
+
+* `mAP50`: IoU ≥ 0.5 기준의 정확도
+* `mAP50-95`: IoU 0.5\~0.95 평균 → **정밀 성능지표**
+
+---
+
+## 🔍 결과 폴더 예시 구조
+
+```bash
+runs/detect/train/
+├── weights/
+│   ├── best.pt
+│   └── last.pt
+├── results.png              ✅ ← mAP 그래프 포함
+├── PR_curve.png             ✅ ← 클래스별 PR 곡선
+├── confusion_matrix.png     ✅
+├── F1_curve.png
+├── opt.yaml                 # 훈련 옵션 기록
+├── results.csv              # 정량 데이터
+└── metrics/
+```
+
+---
+
+## ✅ 요약
+
+| 확인 방법             | 설명                           |
+| ----------------- | ---------------------------- |
+| `results.png`     | mAP, precision, loss 등이 한 눈에 |
+| `PR_curve.png`    | 클래스별 정확도/재현율 커브              |
+| `results.metrics` | 코드로 직접 수치 보기                 |
+| 위치                | `runs/detect/train/` 폴더      |
 
 ---
