--- a/7월22일 로보플로우,전이학습.md
+++ b/7월22일 로보플로우,전이학습.md
@@ -17,5 +17,8 @@ train한 것을
 <img width="1919" height="1079" alt="image" src="https://github.com/user-attachments/assets/e9464f83-829c-41bb-b88a-9735f1d24d09" />
 <img width="1919" height="1079" alt="image" src="https://github.com/user-attachments/assets/ce60086b-d9b2-437f-86b9-446f71c85a73" />
 <img width="1919" height="1079" alt="image" src="https://github.com/user-attachments/assets/eec7b5e1-acf6-479c-85e2-f352cc9d4714" />
+
+<img width="1918" height="1078" alt="image" src="https://github.com/user-attachments/assets/04c5e73b-2a4f-4fba-90e8-c8caaa2a72ed" />
+
 <img width="1919" height="1079" alt="image" src="https://github.com/user-attachments/assets/9b297627-b3f3-42ea-8c70-a052c0aa7bb3" />
 
