--- a/7월22일 로보플로우,전이학습.md
+++ b/7월22일 로보플로우,전이학습.md
@@ -22,3 +22,5 @@ train한 것을
 
 <img width="1919" height="1079" alt="image" src="https://github.com/user-attachments/assets/9b297627-b3f3-42ea-8c70-a052c0aa7bb3" />
 
+
+![Uploading image.png…]()
