--- a/유용한 자료,링크.md
+++ b/유용한 자료,링크.md
@@ -15,3 +15,6 @@ https://docs.google.com/document/d/1Np73nrbqW8hE7hS-2t1sqhM_OFPvciHb35YqMK60ceo/
 https://www.youtube.com/watch?v=2hUmdWuBPDU
 
 https://learn.nvidia.com/courses/course-detail?course_id=course-v1:DLI+S-IV-01+V1
+
+# 교육과정
+<img width="1000" height="1440" alt="image" src="https://github.com/user-attachments/assets/ad59f969-7fc6-4d92-ae33-5efe638f0cdb" />
