--- a/유용한 자료,링크.md
+++ b/유용한 자료,링크.md
@@ -18,3 +18,8 @@ https://learn.nvidia.com/courses/course-detail?course_id=course-v1:DLI+S-IV-01+V
 
 # 교육과정
 <img width="1000" height="1440" alt="image" src="https://github.com/user-attachments/assets/ad59f969-7fc6-4d92-ae33-5efe638f0cdb" />
+
+# 엔비디아 결제 과
+<img width="1918" height="1078" alt="image" src="https://github.com/user-attachments/assets/6f2d0d0d-1381-4dce-8071-1d99482d0fc9" />
+<img width="1919" height="1079" alt="image" src="https://github.com/user-attachments/assets/f88be6c5-0fcc-41b5-b0b0-b401480fc7e5" />
+<img width="1918" height="1078" alt="image" src="https://github.com/user-attachments/assets/2d05406a-246a-4ea4-9106-ae750c48fa9a" />
