--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -1,12 +1,74 @@
 # 원동식 교수님 강의
 
 자율주행을 위한 데이터 처리 - 원동식Dr
+
 칼만필터와 데이터 추적 기법
+
 라이다, 레이더 데이터 처리 carla 시뮬레이터
+
 경로계획 알고리즘
+
 pid제어 기법 및 응용
+
 쿠다 자율주행 시스템 설계 및 구현
 
+## 8월4일
+
 칼만 필터란 무엇인가
+
 센서 융합과 칼만 필터
+
 칼만 필터 실습과 한계
+
+칼만 필터는 다양한 센서 데이터를 결합해서 차량의 위치와 속도를 정확하게 추정하는 데 필수적인 도구
+
+학습목표
+
+1. 칼만 필터의 기본 개념과 동작 원리이해
+2. 센서 데이터에 포함된 노이즈의 원인과 문제점을 파악
+3. 자율주행에서 칼만 필터가 왜 필수적인지, 실제 적용 사례와 연결해 설명
+4. 실습을 통해 칼만 필터의 예측과 갱신 과정을 직접 구현
+
+#### 센서 데이터의 노이즈란?
+센서 데이터는 전자적 잡음, 환경 변화, 하드웨어 한계 등으로 항상 오차를 포함함
+
+노이즈: True value 과 measured value의 차이
+
+자율주행에서 노이즈가 누적되면 위치 추정이 크게 어긋나 안전에 치명적일 수 있음
+
+GPS공부
+
+칼만필터는 "노이즈 섞인 측정값들을 지능적으로 결합해 최적의 추정치를 계산하는 알고리즘
+>> 계속해서 예측하고, 실제 측정값과 비교해 조정하는 과정
+
+단순한 산술 평균과 달리, 각 측정값의 신뢰도(불확실성)을 고려하여 가중 평균을 계산한다
+
+신뢰도가 높은 측정값에는 높은 가중치를, 낮은 측정값에는 낮은 가중치를 부여한다
+
+<img width="588" height="353" alt="image" src="https://github.com/user-attachments/assets/e6f29184-5b35-42d9-a5bb-da83b2d447e3" />
+
+평균만 취하는 것이 아니라 측정치를 얼마나 신뢰할 수 있는지 학습시키는 것
+
+칼만 필터는 예측과 갱신을 무한히 반복한다
+
+예측 상태: 이전 상태를 바탕으로 현재 상태를 추축
+
+갱신 단계: 실제 센서 측정값으로 예측값을 보정함
+>> 시간이 지날수록 정확한 값으로 다가감
+
+<img width="1033" height="697" alt="image" src="https://github.com/user-attachments/assets/a69a361b-ecec-4f59-9b0d-b99bbec1eafd" />
+
+물류창고의 이동로봇등에 사용
+관절 개수가 늘어날 수록 정확한 위치를 알기 어려움
+
+칼만 필터는 노이즈가 많은 센서 데이터를 결합하여 실시간으로 최적의 상태를 추정하는 핵심 알고리즘
+
+동작 원리는 예측과 갱신의 끊임없는 반복
+
+핵심 아이디어는 각 데이터의 불확실성(신뢰도)을 고려한 지능적인 가중 평균
+
+응용 분야는 정밀한 실시간 추정이 필요한 모든 시스템(드론,자율주행,로봇등)
+
+
+
+
