--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -69,6 +69,8 @@ GPS공부
 
 응용 분야는 정밀한 실시간 추정이 필요한 모든 시스템(드론,자율주행,로봇등)
 
+<img width="1059" height="743" alt="image" src="https://github.com/user-attachments/assets/b48bc9e0-3988-4558-8190-d9cc8131afaa" />
+
 
 
 
