--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -29,7 +29,7 @@ pid제어 기법 및 응용
 3. 자율주행에서 칼만 필터가 왜 필수적인지, 실제 적용 사례와 연결해 설명
 4. 실습을 통해 칼만 필터의 예측과 갱신 과정을 직접 구현
 
-#### 센서 데이터의 노이즈란?
+#### Ch.1 센서 데이터의 노이즈란?
 센서 데이터는 전자적 잡음, 환경 변화, 하드웨어 한계 등으로 항상 오차를 포함함
 
 노이즈: True value 과 measured value의 차이
@@ -70,6 +70,12 @@ GPS공부
 응용 분야는 정밀한 실시간 추정이 필요한 모든 시스템(드론,자율주행,로봇등)
 
 <img width="1059" height="743" alt="image" src="https://github.com/user-attachments/assets/b48bc9e0-3988-4558-8190-d9cc8131afaa" />
+
+#### Ch.2 센서 융합과 칼만 필터
+센서 융합을 통해 각기 다른 센서의 장점을 취하고 단점을 보완함, 더 정화갛고 신뢰성이 높은 인지 결과를 만들어냄
+
+왜 센서를 여러개 사용해야 하는가?
+<img width="1036" height="250" alt="image" src="https://github.com/user-attachments/assets/a81004a4-9783-41fc-9eec-aad8c73f0d6c" />
 
 
 
