--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -76,7 +76,5 @@ GPS공부
 
 왜 센서를 여러개 사용해야 하는가?
 <img width="1036" height="250" alt="image" src="https://github.com/user-attachments/assets/a81004a4-9783-41fc-9eec-aad8c73f0d6c" />
-
-
-
+<img width="1024" height="624" alt="image" src="https://github.com/user-attachments/assets/f084932d-f11e-4ab8-b586-963ea736d268" />
 
