--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -78,3 +78,12 @@ GPS공부
 <img width="1036" height="250" alt="image" src="https://github.com/user-attachments/assets/a81004a4-9783-41fc-9eec-aad8c73f0d6c" />
 <img width="1024" height="624" alt="image" src="https://github.com/user-attachments/assets/f084932d-f11e-4ab8-b586-963ea736d268" />
 
+칼만 필터 실습 결과
+
+<img width="1176" height="532" alt="image" src="https://github.com/user-attachments/assets/0b5ec6bb-1673-4efc-a139-a275d8d093b3" />
+
+센서 융합 실급 결과 
+<img width="699" height="455" alt="image" src="https://github.com/user-attachments/assets/3e356f54-05b9-4a80-bc87-80cf0063867b" />
+<img width="216" height="59" alt="image" src="https://github.com/user-attachments/assets/4bb1d513-a98e-4fe7-98f6-cb811fd99c29" />
+<img width="184" height="54" alt="image" src="https://github.com/user-attachments/assets/e0e8db6c-b08e-4f86-b33b-00dd8515e459" />
+
