--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -87,4 +87,5 @@ GPS공부
 <img width="216" height="59" alt="image" src="https://github.com/user-attachments/assets/4bb1d513-a98e-4fe7-98f6-cb811fd99c29" />
 <img width="184" height="54" alt="image" src="https://github.com/user-attachments/assets/e0e8db6c-b08e-4f86-b33b-00dd8515e459" />
 <img width="205" height="78" alt="image" src="https://github.com/user-attachments/assets/24e1f621-39e0-4e1e-8626-885e555c7abb" />
-
+숫자는 어떻게, 언제, 왜 구해야 하는지?
+<img width="550" height="430" alt="image" src="https://github.com/user-attachments/assets/95ff0863-bbc7-4eec-9ed7-20da4fe25d13" />
