--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -90,3 +90,20 @@ GPS공부
 
 숫자는 어떻게, 언제, 왜 구해야 하는지?
 <img width="550" height="430" alt="image" src="https://github.com/user-attachments/assets/95ff0863-bbc7-4eec-9ed7-20da4fe25d13" />
+
+
+선형 정적 시스템, 가우시안 분포, 선형 칼만 필터
+
+<img width="1033" height="272" alt="image" src="https://github.com/user-attachments/assets/e515b1e3-57df-4048-a17c-2151b5e4fc4e" />
+
+
+<img width="1018" height="386" alt="image" src="https://github.com/user-attachments/assets/fa361a3c-6280-4bc3-b107-76e22405e82b" />
+
+| 단계  | 코드                     | 설명                                      |
+| --- | ---------------------- | --------------------------------------- |
+| 1️⃣ | `kalman_gain = ...`    | 측정값과 기존 추정값 중 어느 쪽을 더 신뢰할지 결정하는 **가중치** |
+| 2️⃣ | `estimate = ...`       | **측정값과 추정값의 차이**를 반영하여 추정치를 업데이트        |
+| 3️⃣ | `estimate_error = ...` | 업데이트 후 불확실성이 얼마나 줄었는지를 반영하여 **오차 감소**   |
+
+
+
