--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -104,6 +104,7 @@ GPS공부
 | 1️⃣ | `kalman_gain = ...`    | 측정값과 기존 추정값 중 어느 쪽을 더 신뢰할지 결정하는 **가중치** |
 | 2️⃣ | `estimate = ...`       | **측정값과 추정값의 차이**를 반영하여 추정치를 업데이트        |
 | 3️⃣ | `estimate_error = ...` | 업데이트 후 불확실성이 얼마나 줄었는지를 반영하여 **오차 감소**   |
+<img width="952" height="251" alt="image" src="https://github.com/user-attachments/assets/b40cf8e4-bc65-4d39-88a7-c986c451b020" />
 
 
 
