--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -106,5 +106,7 @@ GPS공부
 | 3️⃣ | `estimate_error = ...` | 업데이트 후 불확실성이 얼마나 줄었는지를 반영하여 **오차 감소**   |
 <img width="952" height="251" alt="image" src="https://github.com/user-attachments/assets/b40cf8e4-bc65-4d39-88a7-c986c451b020" />
 
+<img width="960" height="271" alt="image" src="https://github.com/user-attachments/assets/d5da809c-34d4-465e-9e3a-a82c89ddedb6" />
+
 
 
