--- a/8월4일 칼만필터.md
+++ b/8월4일 칼만필터.md
@@ -108,5 +108,6 @@ GPS공부
 
 <img width="960" height="271" alt="image" src="https://github.com/user-attachments/assets/d5da809c-34d4-465e-9e3a-a82c89ddedb6" />
 
-
+Matlab
+https://kr.mathworks.com/videos/series/understanding-kalman-filters.html
 
