--- a/유용한 자료,링크.md
+++ b/유용한 자료,링크.md
@@ -3,8 +3,10 @@
 https://learn.nvidia.com/courses/course?course_id=course-v1:DLI+S-OV-35+V1&unit=block-v1:DLI+S-OV-35+V1+type@vertical+block@dd900693fd884c5f82e3e347f1e604c8
 
 # nvidia certification
-
+jetson nano
 [nvidia.pdf](https://github.com/user-attachments/files/21539536/nvidia.pdf)
+real-time building application
+[My Learning.pdf](https://github.com/user-attachments/files/21708131/My.Learning.pdf)
 
 # 딥러닝 용어정리
  
