Update 7월14일CNN 혁펜하임의 이지 딥러닝.md

--- a/7월14일CNN 혁펜하임의 이지 딥러닝.md
+++ b/7월14일CNN 혁펜하임의 이지 딥러닝.md
@@ -1,9 +1,9 @@
-### 혁펜하임 이지 딥러닝 책 정리
+### 혁펜하임 이지 딥러닝 
 컨볼루션을 통해 얻은 결과를 feature map이라고 함
 
 피처맵은 채널 축으로 쌓아 결과를 만든다
 
-이 방식이 위치 정보를 유지하고 채널이 ㅊ출한 특징 정보를 분리하여 보존함
+이 방식이 위치 정보를 유지하고 채널이 cn출한 특징 정보를 분리하여 보존함
 
 컬볼루션 레이어에서 학습 가능한 파라미터는 필터가 가지는 웨이트와 바이어스
 
